--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,11 @@ org.gradle.parallel=true
 org.gradle.configureondemand=true
 org.gradle.caching=true
 android.enableBuildScriptClasspathCheck=false
+
+
+APP_COMPILE_SDK_VERSION=29
+APP_BUILD_TOOL_VERSION=30.0.2
+MIN_SDK_VERSION=16
+TARGET_SDK_VERSION=29
+APP_VERSION_CODE=1
+APP_VERSION_NAME=1.0
